# iprofi_robotics_olpympiad

./: README.md
profi2021_bachelor_scene/: README.md
profi2021_bachelor_scene/hector_quadrotor_description/urdf/: quadrotor_with_cam.urdf.xacro
profi2021_bachelor_scene/profi2021_bachelor_scene/: CMakeLists.txt  README.md  package.xml
profi2021_bachelor_scene/profi2021_bachelor_scene/launch/: start_scene.launch
profi2021_bachelor_scene/profi2021_bachelor_scene/worlds/: track_1.world
profi2021_bachelor_solution/: .project
profi2021_bachelor_solution/launch/: solution_c++.launch
profi2021_bachelor_solution/src/: simple_move.cpp  simple_move_cpy.cpp
profi2021_test_scene/: CMakeLists.txt  README.md  package.xml
profi2021_test_scene/launch/: diff_drive_robot_with_cam.launch
profi2021_test_scene/models/diff_drive_robot/urdf/: diff_drive_robot.xacro
profi2021_test_scene/worlds/: simple_scene.world
profi2021_test_solution/: CMakeLists.txt  README.md  package.xml
profi2021_test_solution/launch/: solution.launch
